k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clarityci
  labels:
    app: clarityci-website
