k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clarityci-website
  namespace: clarityci
  labels:
    app: clarityci-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: clarityci-website
